# MinimalCompiler

./: .gitignore  CMakeLists.txt  arena.c  arena.h  main.c  main.scc  readme.md
AsmPractice/: test.asm
backend/: emitter.c  emitter.h
frontend/: rd.c  rd.h  sa.c  sa.h  tokenizer.c  tokenizer.h
nasmlib/: print64.asm
utils/: arena.c  arena.h  utils.h
